# flutter_libserialport

./: .gitignore  .gitmodules  .metadata  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/libserialport/: CMakeLists.txt  config.h
android/src/main/: AndroidManifest.xml
example/: .gitignore  .metadata  README.md  pubspec.yaml
example/android/: build.gradle
example/android/app/: build.gradle
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
lib/: flutter_serial_port.dart  flutter_serialport.dart
linux/: CMakeLists.txt  flutter_libserialport_plugin.cc  flutter_serial_port_plugin.cc  flutter_serialport_plugin.cc
linux/libserialport/: CMakeLists.txt  config.h
macos/: flutter_libserialport.podspec  flutter_serial_port.podspec  flutter_serialport.podspec
macos/Classes/: FlutterLibserialportPlugin.swift  FlutterSerialPortPlugin.swift  FlutterSerialportPlugin.swift
test/: flutter_serial_port_test.dart
windows/: CMakeLists.txt  flutter_libserialport_plugin.cpp  flutter_serial_port_plugin.cpp  flutter_serialport_plugin.cpp
windows/libserialport/: CMakeLists.txt  config.h
(+22 files in other folders)
